hphp/hack/test/typecheck/shape/shape_field_check/shape_at2.php.like_types.exp
File "shape_at2.php", line 8, characters 19-31:
Invalid argument (Typing[4110])
File "shape_at2.php", line 8, characters 19-31:
Expected shape(?'missing' => [unresolved], ...) because Shapes::at expects a shape
File "shape_at2.php", line 3, characters 20-48:
But got dynamic because it is an unenforceable type
